[tool.poetry]
name = "bq_iterate"
version = "0.1.0"
description = ""
authors = ["Senhaji-Rhazi-Hamza <hamza.senhaji-rhazi@epita.fr>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tenacity = "^7.0.0"
google-cloud-bigquery = "^2.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
