[tool.poetry]
name = "bq_iterate"
version = "0.1.6"
description = "Work with BigQuery data as you do with lists in python"
authors = ["Senhaji-Rhazi-Hamza <hamza.senhajirhazi@gmal.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Senhaji-Rhazi-Hamza/bq_iterate"
keywords = ["BigQuery", "google", "batch", "gcp"]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9"
]
[tool.poetry.dependencies]
python = ">=3.8,<3.10"
tenacity = "^7.0.0"
google-cloud-bigquery = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
